alignments fix

--- a/src/sass/side-nav.scss
+++ b/src/sass/side-nav.scss
@@ -97,9 +97,9 @@ li {
   }
   &--img {
     width: 100%;
-    height: 100%;
+    height: 110%;
     max-width: 300px;
-    max-height: 163px;
+    max-height: 172px;
     border-radius: 3px;
   }
   &--msg-logo {
